--- a/src/scss/components/_Overlay.scss
+++ b/src/scss/components/_Overlay.scss
@@ -1,8 +1,15 @@
 .overlay {
+  display: none;
   font-family: $font-family-primary;
   position: fixed;
+  left: 0;
+  top: 0;
   width: 100vw;
   height: 100vh;
   background: rgba($color: #000000, $alpha: 0.7);
   z-index: 100;
+
+  &--active {
+    display: block;
+  }
 }
